force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>Maintains a list of serviceable locations, identified by pincodes, to support delivery and service operations.</description>
    <label>Delivery Site</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>