force-app/main/default/objects/Site__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>Captures the city of the serviceable location.</description>
    <inlineHelpText>City of the serviceable location.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>