force-app/main/default/objects/Site__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>Captures the country of the deliverable location</description>
    <inlineHelpText>Country of the deliverable location</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>