force-app/main/default/objects/Site__c/fields/serial__c.field-meta.xml
<CustomField>
    <fullName>serial__c</fullName>
    <description>Displays the auto-generated serial number for each location.</description>
    <displayFormat>LNO-{00000000}</displayFormat>
    <inlineHelpText>Auto-generated serial number for each location.</inlineHelpText>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>