force-app/main/default/objects/Site__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <description>Captures the street of the serviceable location.</description>
    <inlineHelpText>Street of the serviceable location.</inlineHelpText>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>